fix(style) Prose prompt z-index bump

--- a/editor/style/prose/editor.css
+++ b/editor/style/prose/editor.css
@@ -253,7 +253,7 @@
     border: 1px solid silver;
     position: fixed;
     border-radius: 3px;
-    z-index: 11;
+    z-index: 200;
     box-shadow: -.5px 2px 5px rgba(0, 0, 0, .2);
   }
 
